--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <li><a href="https://www.facebook.com/elvis.bruno.5437/" ><i class="fab fa-facebook">&nbsp</i>Facebook</a></li><br>
                     <li><a href="https://www.instagram.com/_who_is_bruno/"><i class="fab fa-instagram">&nbsp</i>Instagram</a></li><br>
                     <li><a href="https://www.linkedin.com/in/elvis-korir-b36346288/"><i class="fab fa-linkedin">&nbsp</i>LinkedIn</a></li><br>
-                    <li><a href="https://www.youtube.com/@kimtech09"><i class="fab fa-linkedin">&nbsp</i>Youtube</a></li> 
+                    <li><a href="https://www.youtube.com/@kimtech09"><i class="fab fa-youtube">&nbsp</i>Youtube</a></li> 
             </div>
              <div class="cont">
                 <h4>CONTACT</h4>
